use static factory method Set.of (creates immutable set)